fixed overflowing grid

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ video {
     --primary: hsl(24, 56%, 53%);
     --secondary: hsl(24, 80%, 71%);
 
+    --hover: hsl(24, 80%, 80%);
     --shadow: rgba(0, 0, 0, .5);
     --white: hsl(240, 100%, 99%);
     --black: hsl(0, 0%, 15%);
@@ -61,6 +62,7 @@ video {
     --primary: hsl(289, 23%, 41%);
     --secondary: hsl(284, 77%, 76%);
 
+    --hover: hsl(284, 77%, 86%);
     --shadow: none;
     --white: hsl(240, 1%, 68%);
     --black: hsl(0, 0%, 6%);
@@ -105,7 +107,7 @@ b {
 }
 
 .change-theme__btn:hover {
-    background-color: var(--grey);
+    background-color: var(--hover);
 }
 
 .header {
@@ -249,8 +251,8 @@ b {
 }
 
 .nav__button:hover {
-    color: var(--black);
-    background: var(--secondary);
+
+    background: var(--hover);
     box-shadow: 0 0 5px 0 var(--shadow);
 }
 
@@ -374,7 +376,7 @@ b {
 .projects__title {
     font-size: 3rem;
     text-align: center;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.5rem;
     color: var(--header);
     border-bottom: 2px solid var(--primary);
     margin: 0 2rem 0 2rem;
@@ -411,7 +413,7 @@ b {
     display: grid;
     column-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-    margin: 3em 3em 3em 3em;
+    margin: 2rem;
 
 }
 
@@ -436,7 +438,7 @@ b {
     background-color: var(--card-background);
 
 
-    padding: 1em 2em 1em 2em;
+    padding: 1em 1.5em 1em 1.5em;
 
 }
 
@@ -472,12 +474,13 @@ b {
 
 .project-container__card-btn {
 
-    padding: .5rem 1rem .5rem 1rem;
+    padding: .5rem;
     background-color: var(--secondary);
     color: var(--black);
     border: none;
 
 }
+
 
 .project-footer-container {
     display: flex;
@@ -505,7 +508,7 @@ b {
 
 
 .project-container__card-btn:hover {
-    background-color: var(--secondary);
+    background-color: var(--hover);
 }
 
 .project__p-name {
@@ -521,11 +524,11 @@ b {
 }
 
 .skills-container {
-    margin: 5rem 1rem 5rem 1rem;
+    margin: 5rem 2rem 5rem 2rem;
 }
 
 .skills__p {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: 1rem 0 1rem 0;
     color: var(--text);
 }
@@ -558,7 +561,7 @@ b {
     padding: 1em 0 1em 0;
     font-size: 3rem;
     text-align: center;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.5rem;
     color: var(--header);
     text-shadow: var(--text-shadow);
 
@@ -582,7 +585,7 @@ b {
 
     display: grid;
 
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
 
 }
 
@@ -597,7 +600,7 @@ b {
     padding: 1em 0 1em 0;
     font-size: 3rem;
     text-align: center;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.5rem;
     color: var(--header);
 
 }
@@ -648,9 +651,11 @@ b {
 }
 
 .contact-details {
-    text-align: center;
-    font-size: 2rem;
-    margin: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
+    margin: 2rem;
     padding: 1em 0 1em 0;
     color: var(--text);
 
@@ -665,7 +670,7 @@ b {
 
 .about-me-container {
 
-    margin: 5rem 5rem 5rem 5rem;
+    margin: 2rem;
     padding: 1em 1em 1em 1em;
 
     color: var(--text);
@@ -696,7 +701,7 @@ b {
     .project-container {
         display: grid;
         column-gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
         margin: 3em 3em 3em 3em;
     }
 
